# Segfault

./: .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
assets/manifests/hello_world/: manifest.sft
assets/shaders/: default.frag  default.vert
scripts/: compile_assets.py  compile_shader.py  compile_shader.sh
src/editor/: CMakeLists.txt  main.cpp
src/examples/: CMakeLists.txt
src/examples/behaviortree_sample/: CMakeLists.txt
src/examples/common/: CMakeLists.txt  examplebase.cpp  examplebase.h
src/examples/hello_world/: CMakeLists.txt  hello_world.cpp
src/examples/scene_sample/: CMakeLists.txt
src/runtime/: CMakeLists.txt
src/runtime/Application/: App.h
src/runtime/ai/: .behavior_tree.cpp.un~  .behavior_tree.h.un~  behavior_tree.cpp  behavior_tree.h
src/runtime/application/: app.cpp  app.h
src/runtime/core/: argumentparser.cpp  argumentparser.h  config.h  filearchive.h  genericfilemanager.cpp  genericfilemanager.h  ifilemanager.h  segfault.h  segfaultexception.h  tokenizer.cpp  tokenizer.h
src/runtime/renderer/: RHI.h  RHIVulkan.cpp  rendercore.h  renderthread.cpp  renderthread.h  vulkanbuffer.cpp  vulkanbuffer.h  vulkandevice.cpp  vulkandevice.h  vulkantypes.h  vulkanutils.cpp  vulkanutils.h
src/tools/: CMakeLists.txt
src/tools/assetbaker/: CMakeLists.txt  main.cpp
